# lie-brary

./: .gitignore  README.md  pyproject.toml  requirements.txt
lie-brary/: app.py
lie-brary/data/cleaned_data/: cleaned_data.csv
lie-brary/pages/: anaysis.py  dashboard.py  datatable.py
lie-brary/scripts/clean/: clean.py
lie-brary/scripts/dashboard/: helper.py  visualization.py
lie-brary/scripts/scrap/: account_r.txt  scrap_twitter.py
lie_brary/: __main__.py  app.py  run.py
lie_brary/assets/: [CAPP 122] Lie-brary Analysis (2).html  [CAPP 122] Lie-brary Analysis.html  analysis.html
lie_brary/data/analysis_data/: safe-t_300posts_add_url.csv  tweets_safe-t.csv
lie_brary/data/cleaned_data/: cleaned_data.csv  feedback.csv  manual_labeld_all.csv  manual_labeled.csv  manual_labelled.csv  update_date.csv
lie_brary/data/raw_data/: reddit_raw.csv  reddit_safe-t20230304_15.csv  reddit_safe-t20230304_16.csv  reddit_safe-t20230304_17.csv  reddit_safe-t20230304_18.csv  reddit_safe-t20230304_19.csv  reddit_safe-t20230304_20.csv  reddit_safe-t20230305_14.csv  reddit_safe-t20230305_15.csv  reddit_safe-t20230305_16.csv  reddit_safe-t20230305_17.csv  reddit_safe-t20230305_18.csv  reddit_safe-t20230305_19.csv  tweets_safe-t20230304_15.csv  tweets_safe-t20230304_16.csv  tweets_safe-t20230304_17.csv  (+9 more)
lie_brary/notebook/: [CAPP 122] Lie-brary Analysis.ipynb  predict.ipynb  training.ipynb
lie_brary/pages/: analysis.py  dashboard.py  datatable.py  feedback.py  mythbusting.py  wordcloud.py
lie_brary/scripts/: getdata.py  put_script_here.txt
pages/: datatable.py
(+13 files in other folders)
